--- a/Zbang.Cloudents.Mvc4WebRole/Views/Box/LeaderboardPartial.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Box/LeaderboardPartial.cshtml
@@ -1,5 +1,5 @@
 ﻿
-<md-dialog>
+<md-dialog class="community">
     <md-toolbar>
         <md-button class="close" ng-click="g.close()">
             <md-icon md-svg-icon="t:close"></md-icon>
