--- a/Zbang.Cloudents.Mvc4WebRole/Views/Shared/Partials2/_commonTemplate.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Shared/Partials2/_commonTemplate.cshtml
@@ -110,7 +110,7 @@
     </div>
 </script>
 <script type="text/ng-template" id="flashcard-template.html">
-    <a class="quiz quiz-template" ng-href="{{::e.url}}">
+    <a class="quiz quiz-template flashcard-element" ng-href="{{::e.url}}">
         <div class="base">
             <div class="quiz-ratio">
                 <div class="content">
