--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/box.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/box.less
@@ -1206,7 +1206,7 @@ md-menu-item > a.md-button {
     }
 }
 
-.flashcards-list {
+.flashcard-element {
     .content {
         .draft-wpr {
             background: @textColorGrey;
