--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/General.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/General.less
@@ -240,7 +240,7 @@ body {
         color: #0d3a52;
 
         &:hover {
-            color: @textColorDisabledActionButton;
+            color: #95cfec;
         }
     }
 
