--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/General.rtl.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/General.rtl.css
@@ -177,7 +177,7 @@ body .quiz-template .bottom .name {
   color: #0d3a52;
 }
 .page-tabs .md-tab:hover {
-  color: #83b6d0;
+  color: #95cfec;
 }
 .page-tabs md-ink-bar {
   display: none;
