Box search complete bug 7004

--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/user.rtl.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/user.rtl.css
@@ -94,6 +94,9 @@
   .userPage #show-points-info ~ .points-info {
     max-height: 0;
     overflow: hidden;
+    -moz-transition: max-height 0.3s ease-in;
+    -o-transition: max-height 0.3s ease-in;
+    -webkit-transition: max-height 0.3s ease-in;
     transition: max-height 0.3s ease-in;
   }
   .userPage #show-points-info:checked ~ .points-info {
