Added application insight to web role

--- a/Zbang.Cloudents.Mvc4WebRole/Views/Home/Index.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Home/Index.cshtml
@@ -45,6 +45,7 @@
         background: @ViewBag.signupColor !important;
     }
     </style>
+    @Helpers.AppInsight()
 </head>
 <body class="homePage">
     <div class="page-content">
