Fixed box notification overflow on dashbooard  + margin issues over all the site

--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/General.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/General.less
@@ -127,6 +127,7 @@ body {
     transition: margin-right 0.1s;
 
     @media (max-width: 960px) {
+        padding: 0 4px;
         margin-right: 0;
     }
 
@@ -1009,7 +1010,11 @@ md-toast .md-toast-content span {
         border-radius: 100%;
         background: rgba(255, 255, 255, 0.6);
     }
+}
 
+.indent-content {
+    margin-left: 8px;
+    margin-right: 8px;
 }
 
 .fade-in-repeat.ng-enter {
