--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/box.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/box.less
@@ -150,9 +150,9 @@
     }
 }
 
-.feed-wrapper {
+/*.feed-wrapper {
     margin: 0 -8px;
-}
+}*/
 
 .feed-wrapper, .members, .quizzes-list, library-list {
     margin-top: 10px;
