--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/dashboard.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/dashboard.less
@@ -10,9 +10,9 @@
         padding: 0;
     }
 
-    .dashboard-actions, .dashboard-content {
+    /*.dashboard-actions, .dashboard-content {
         margin: 0 -8px;
-    }
+    }*/
 
     .dashboard-actions .actions-container {
         .displayFlex();
