--- a/Zbang.Cloudents.Mvc4WebRole/Views/Dashboard/Index.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Dashboard/Index.cshtml
@@ -9,7 +9,7 @@
 @*<div class="ad" data-ng-dfp-ad-container>
         <div data-ng-dfp-ad="div-gpt-ad-1461243129238-0" data-ng-dfp-ad-hide-when-empty></div>
     </div>*@
-<div class="page-title">
+<div class="page-title indent-content">
     <h1>@DashboardResource.Title</h1>
 </div>
 <div class="dashboard-actions" layout="row" layout-wrap>
