--- a/Zbang.Cloudents.Mvc4WebRole/Views/User/Index2.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/User/Index2.cshtml
@@ -6,12 +6,12 @@
 <div class="ad">
     <adsense ad-client="ca-pub-1215688692145777" ad-slot="1334764954" inline-style="display:block;" ad-format="auto"></adsense>
 </div>
-<div class="page-head">
+<div class="page-head indent-content">
     <div class="page-title">
         <h1>@IndexResources.User </h1>
     </div>
 </div>
-<div class="userPage">
+<div class="userPage indent-content">
     <div class="profile-sidebar">
         <div class="portlet light profile-sidebar-portlet" ng-if="::!u.isUserProfile">
             <div class="profile-userpic">
