--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/box.rtl.css
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/box.rtl.css
@@ -146,9 +146,9 @@
     width: 50%;
   }
 }
-.feed-wrapper {
-  margin: 0 -8px;
-}
+/*.feed-wrapper {
+    margin: 0 -8px;
+}*/
 .feed-wrapper,
 .members,
 .quizzes-list,
