--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/library.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/library.less
@@ -4,9 +4,9 @@
 .library {
     margin-bottom: 50px;
 
-    .actions, .library-list{
+    /*.actions, .library-list{
         margin: 0 -8px;
-    }
+    }*/
 
     .university {
         height: 136px;
