--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/menu.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/menu.less
@@ -65,7 +65,7 @@
         position: fixed !important;
         top: @heightOfHeader;
         border-radius: 5px;
-        width: 235px;
+        width: @widthOfSideMenu - 5px;
         margin-left: 0;
         z-index: 10;
         height: ~"calc(100vh - @{heightOfHeader})";
@@ -115,7 +115,7 @@
 
         li {
             width: 100%;
-            padding-right: 10px;
+            padding-right: 2px;
             margin: 2px 0;
         }
 
