Fixed $sope.app.showToaster call to showToasterService.showToaster

--- a/Zbang.Cloudents.Mvc4WebRole/Content/Site/library.less
+++ b/Zbang.Cloudents.Mvc4WebRole/Content/Site/library.less
@@ -3,10 +3,12 @@
 
 .library {
     margin-bottom: 50px;
-
     /*.actions, .library-list{
         margin: 0 -8px;
     }*/
+    .page-title {
+        padding: 10px 0;
+    }
 
     .university {
         height: 136px;
@@ -18,7 +20,6 @@
             padding: 0 3%;
             margin: 0;
             //width: 100%;
-
             img {
                 background-color: #f1f1f1;
             }
@@ -49,7 +50,8 @@
     }
 
     .department-wrap {
-        position:relative;
+        position: relative;
+
         h3 {
             margin: 0;
             text-transform: capitalize;
@@ -75,7 +77,6 @@
     .department {
         color: @textColorBlack;
     }
-
     /*.dots-3 {
         fill: @textColorLightGrey;
     }*/
