Item to typescript.
remove console log
like toast fixes.

--- a/Zbang.Cloudents.Mvc4WebRole/Views/Item/_FlagItem.cshtml
+++ b/Zbang.Cloudents.Mvc4WebRole/Views/Item/_FlagItem.cshtml
@@ -2,7 +2,7 @@
 @using Zbang.Cloudents.Mvc4WebRole.Views.Item.Resources
 @using Zbang.Cloudents.Mvc4WebRole.Views.Shared.Resources
 
-<form name="flagitem" class="flag-form" novalidate ng-submit="i.flagItem()" ng-if="i.selectedState === i.state.flag">
+<form name="flagitem" class="flag-form" novalidate ng-submit="i.flagItem()" ng-if="i.selectedState === 2">
     <div class="title text-capitalize">@ItemsResources.ReportAbuse</div>
     <md-content>
         <md-input-container flex="100">
